Fixed: The height of the buttons is too small compared to the width.

--- a/inc/css/admin.css
+++ b/inc/css/admin.css
@@ -19,6 +19,9 @@ p {
 .postbox a {
     text-decoration: none;
 }
+.postbox button.btn {
+    height: 34px;
+}
 
 /* Title and Description of page
  -------------------------------------------------------------- */
